@startuml

!theme monokai_npp from ..\.styles
scale 1.75

class Proteus {
    +{static}move()
    +{static}eat()
    +{static}reproduce()
}

class Fish {
    +{static}breath()
}

class Reptile {
    +{static}hide()
}

class Bird {
    +{static}fly()
}

class Mammal {
    +{static}care()
}

class Human {
    +{static}speak()
}

hide class empty members

Proteus <|-- Fish
Fish <|-- Reptile
Reptile <|-- Bird
Reptile <|-- Mammal
Mammal <|-- Human

@enduml
